# medical_ai_agent

./: .gitignore  1.3.6.1.4.1.14519.5.2.1.6279.6001.395623571499047043765181005112.mhd  CODE_READING_GUIDE.md  README.md  analyze_mhd.py  detect_from_raw.py  detect_from_raw_final.py  docker-compose.yml  example_usage.py  inference_384.py  inference_final.py  pyproject.toml  requirements.txt  visualize_results.py
configs/: knowledge_base.yaml  vector_db.yaml
doc/: API_DOCUMENTATION.md  PROJECT_DOCUMENTATION.md
knowledge_base/: 01_鑲哄彾鍒嗘瑙ｅ墫鍥捐氨.md  02_ICD11_Neoplasms_Lung.csv  03_R91_Radiology_Abnormalities.csv  04_CT鑲虹粨鑺傝瘖鏂笓瀹跺叡璇哶2023.md  05_鑲虹粨鑺傝瘖鐤楁寚鍗梍2024.md  Lung-RADS_v2022.md  README.md
martin/: __init__.py  __main__.py  inference.py
martin/llm/: __init__.py  case_generator.py  deepseek_client.py
martin/minai/: __init__.py  image_processor.py
martin/monai/: __init__.py  nodule_detector.py
martin/rag/: __init__.py  document_loader.py  embedding_client.py  retriever.py  vector_store.py
martin/util/: __init__.py  logger.py  result_manager.py
models/bge-small-zh-v1.5/: config.json
scripts/: import_knowledge.py  init_vector_db.sql
tests/: test_case_generator.py  test_embedding.py  test_full_pipeline.py  test_inference_direct.py  test_integration.py  test_llm.py  test_logger.py  test_model_only.py  test_monai.py  test_one_click.py  test_rag_full_pipeline.py  test_rag_report.py  test_result_manager.py  test_retriever.py  test_vector_store.py
