[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "martin"
version = "0.1.0"
description = "Medical AI Agent - 肺部结节检测系统"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

authors = [
    {name = "Martin", email = "martin@example.com"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Artificial Intelligence"
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "monai>=1.3.0",
    "nibabel>=5.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "requests>=2.31.0"
]

[project.scripts]
martin = "martin.__main__:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/martin"
"Bug Tracker" = "https://github.com/yourusername/martin/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["martin*"]

[tool.setuptools.package-data]
martin = ["data/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
